{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "SpiritActions",
            "id": "e97628ec-982e-45bb-afbb-538cb4cb31b7",
            "actions": [
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "0d0d33e1-4d6d-42b9-99da-c02a1d42cef2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CommandRally",
                    "type": "Button",
                    "id": "5311fcfd-f74c-407e-a234-bcb33393ebc3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CommandAttack",
                    "type": "Button",
                    "id": "b2bc4a21-a3a8-4266-a974-d7c29a8ca930",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CommandDodge",
                    "type": "Button",
                    "id": "fc978232-732f-4397-8f01-0b67825e7fe4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "5790c041-9db2-4214-8448-f9f3390a55f6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CommandStandStill",
                    "type": "Button",
                    "id": "3168745a-15e0-4096-9d79-3d2d0c466b88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63ed803c-4a99-4940-af76-8796bd9b5f8e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f1f7bae-1aef-4840-a57b-fce4cc4cd206",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CommandRally",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7976a96-f179-44ab-aef2-9d34429da8aa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CommandAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb42c0de-b4e4-4cbd-a4f0-269fde5eeabb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CommandDodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f05ad3f0-a082-4929-ba40-d635824e1a08",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fec4d8b-05d7-46fa-bc61-378cf8c719c0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CommandStandStill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}